# LowerHouseVoteLog

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  CMakePresets.json  README.md  resource.qrc  vcpkg.json
qml/: Main.qml  Sidebar.qml  ThemeButtonComponent.qml  ThemeManger.qml  ThemeMenu.qml
qml/components/: FontManager.qml  MenuItem.qml
qml/pages/: ActivityPage.qml  StartVotePage.qml  UserPage.qml
qml/theme/: ThemeFrappe.qml  ThemeLatte.qml  ThemeMacchiato.qml  ThemeManger.qml  ThemeMocha.qml
res/: setting.toml
src/: main.cpp
src/models/: palette.hpp  record.hpp  user.hpp
src/services/: setting_manager.cpp  setting_manager.hpp  sql_services.cpp  sql_services.hpp  user_manager.cpp  user_manager.hpp
src/theme/: palette.cpp  palette.hpp  palette_manager.cpp  palette_manager.hpp  theme_manager.cpp  theme_manager.hpp
src/theme_old/: current_theme.cpp  current_theme.hpp  palette.hpp  theme_manager.cpp  theme_manager.hpp
